[gd_scene load_steps=4 format=3 uid="uid://fikkdd2w3sij"]

[ext_resource type="Texture2D" uid="uid://dlmrhhh0dpsbl" path="res://assets/resources/Tilemap/tilemap_packed.png" id="1_4xc0u"]
[ext_resource type="Script" path="res://bundles/ui/bar.gd" id="2_ahlq3"]
[ext_resource type="Texture2D" uid="uid://c71p0nu1lmapg" path="res://assets/resources/UIpackSheet_transparent.png" id="3_h8t1l"]

[node name="HUD" type="CanvasLayer"]

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.211765, 0.239216, 0.290196, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -100.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 12

[node name="Panel" type="Panel" parent="HBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(150, 100)
layout_mode = 2
size_flags_horizontal = 0

[node name="Label" type="Label" parent="HBoxContainer/MarginContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "[Menu Panel]"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BarHud" type="Panel" parent="HBoxContainer"]
custom_minimum_size = Vector2(500, 100)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
size_flags_stretch_ratio = 3.0

[node name="Weapon_Image" type="Sprite2D" parent="HBoxContainer/BarHud"]
texture_filter = 1
position = Vector2(50, 50)
scale = Vector2(5, 5)
texture = ExtResource("1_4xc0u")
hframes = 12
vframes = 11
frame = 121

[node name="Panel" type="Panel" parent="HBoxContainer/BarHud"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -1.0
offset_right = -10.0
offset_bottom = 9.0
grow_horizontal = 0
grow_vertical = 2
pivot_offset = Vector2(0, 5)

[node name="Start Position" type="Node2D" parent="HBoxContainer/BarHud/Panel"]
unique_name_in_owner = true
position = Vector2(5, 5)

[node name="bar" type="Node2D" parent="HBoxContainer/BarHud/Panel"]
position = Vector2(5, 5)
script = ExtResource("2_ahlq3")

[node name="graphic" type="Sprite2D" parent="HBoxContainer/BarHud/Panel/bar"]
texture_filter = 1
scale = Vector2(0.25, 5)
texture = ExtResource("1_4xc0u")
hframes = 12
vframes = 11
frame = 48

[node name="Panel2" type="Panel" parent="HBoxContainer/BarHud"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -10.0
offset_top = -5.0
offset_right = -10.0
offset_bottom = 5.0
grow_horizontal = 0
grow_vertical = 2

[node name="Target Position" type="Node2D" parent="HBoxContainer/BarHud/Panel2"]
unique_name_in_owner = true
texture_filter = 1
position = Vector2(-5, 5)
scale = Vector2(0.25, 5)

[node name="chord_1" type="Sprite2D" parent="HBoxContainer/BarHud"]
texture_filter = 1
position = Vector2(105, 50)
scale = Vector2(2, 2)
texture = ExtResource("3_h8t1l")
hframes = 30
vframes = 33
frame = 768

[node name="chord_2" type="Sprite2D" parent="HBoxContainer/BarHud"]
unique_name_in_owner = true
texture_filter = 1
position = Vector2(200, 50)
scale = Vector2(2, 2)
texture = ExtResource("3_h8t1l")
hframes = 30
vframes = 33
frame = 714

[node name="chord_3" type="Sprite2D" parent="HBoxContainer/BarHud"]
unique_name_in_owner = true
texture_filter = 1
position = Vector2(295, 50)
scale = Vector2(2, 2)
texture = ExtResource("3_h8t1l")
hframes = 30
vframes = 33
frame = 768

[node name="chord_4" type="Sprite2D" parent="HBoxContainer/BarHud"]
unique_name_in_owner = true
texture_filter = 1
position = Vector2(390, 50)
scale = Vector2(2, 2)
texture = ExtResource("3_h8t1l")
hframes = 30
vframes = 33
frame = 714

[node name="MarginContainer2" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_right = 12

[node name="Panel2" type="Panel" parent="HBoxContainer/MarginContainer2"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/MarginContainer2/Panel2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "[Minimap Pabel]
"
horizontal_alignment = 1
vertical_alignment = 1
